# christmass-koma

./: LICENSE  README.md  christmas-koma.cabal  messages.txt  pass.txt  stack.yaml  test.txt
src/: Main.hs
src/Cz/MartinDobias/ChristmasKoma/: PadCracker.hs
